fix: align-item: end changed to flex-end

--- a/src/components/Tables/RoundTable.module.scss
+++ b/src/components/Tables/RoundTable.module.scss
@@ -13,7 +13,7 @@
 .text-header {
   display: flex;
   justify-content: center;
-  align-items: end;
+  align-items: flex-end;
   width: 25vw;
   height: 12vh;
   font-size: 2vw;
